--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,13 +1,1 @@
-<h2>username is {{userName}}</h2>
-<a [href]="Link">facebook</a>
-<img [src]="imgsrc">
-<button (click)="sayhi()">click me</button>
-<input type="text" (keydown.s)="test($event)">
-<h2 [class]="Salary>2000?'bg-success':'bg-info'">tasdsad</h2>
-<h2 [class.bg-danger]="Salary>2000">back end</h2>
-<div class="bg-success">
-    <h2 [style.color]="'red'">front end</h2>
-    <h2>back end</h2>
-    <h2 [style.background]="'red'">flatter end</h2>
-
-</div>
+{{user.name}}
